--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
             <main class="main">
                 <section class="section lado-direito">
+                    <h2>Lições aprendidas nos últimos dias</h2>
                     <nav>
-                        <h3>Lições aprendidas nos últimos dias</h3>
                         <ol id="licoes_aprendidas">
                             <li>Respeitar o seu tempo de aprendizagem.</li>
                             <li>Aprender a pescar, ou seja, buscar a metodologia ativa de aprendizado.</li>
@@ -36,7 +36,7 @@
                     </nav>
 
                     <nav>
-                        <h3>Lições a aprender</h3>
+                        <h2>Lições a aprender</h2>
                         <ul id="licoes_a_aprender">
                           <li>Não desistir no primeiro problema.</li>
                           <li>Acreditar que todos são capazes, especialmente você.</li>
@@ -52,16 +52,16 @@
                     </nav>
                     <table class="table">
                         <tr>
-                        <th>Situação</th>
-                        <th>Habilidade</th>
+                            <th>Situação</th>
+                            <th>Habilidade</th>
                         </tr>
                         <tr>
-                        <th>Erro</th>
-                        <th>Colaboração</th>
+                            <td>Erro</td>
+                            <td>Colaboração</td>
                         </tr>
                         <tr>
-                        <th>Conflito</th>
-                        <th>Inteligência emocional</th>
+                            <td>Conflito</td>
+                            <td>Inteligência emocional</td>
                         </tr>
                     </table>
                 </section>
@@ -82,7 +82,7 @@
             </main>
             
             <footer id="rodape">
-                <h5>Conteúdo produzido por Mariana Saraiva em parceria com Trybe, 2021</h5>
+                <h3>Conteúdo produzido por Mariana Saraiva em parceria com Trybe, 2021</h3>
             </footer>
         </body>
     </html>
