Change - tag <article> and <aside>

--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
                     <h2>Ary Barbosa</h2>
                 </figcaption>
             </figure>
-            <article>
+            <article class="lado-esquerdo">
                 O processo de aprendizado na Trybe está sendo muito satisfatório, a forma como é estruturado o dia, é um
                 fator crucial para o aprendizado. Poder estudar o conteúdo que será abordado no dia, antes da aula,
                 possibilita uma maior absorvição do que é mostrado na aula ao vivo, exercício seguido por monitoria
                 facilita muito na fixação do conteúdo.  Esse conjunto de fatores possibilita no processo de
                 aprendizagem. 
             </article>
+            <aside class="lado-direito">
+                Pouco tempo se passou e a sensação é de evolução, não só em termos técnicos, evolução
+                pessoal(autoconhecimento), refletir não só sobre si, mas tentar entender o outro. Nesse pouco tempo
+                aprendi muito mais do que parte técnica, relacionada a programação, mas também a me alto programar.
+            </aside>
         </section>
         <section>
             <p>
