--- a/index.html
+++ b/index.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <title>Lesson Learned</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-   <div id="cabecalho">
-       <h1 id="titulo">Olá meu nome é Izabela Hammerschlag</h1>
-   </div>
-   <img id="minha_foto" src="minhafoto.png"> 
-   <h2>Lista de lições aprendidas:</h2>
-   <ol id="licoes_aprendidas">
-       <li>Unix</li>
-       <li>Bash</li>
-       <li>comandos no terminal</li>
-       <li>VS code</li>
-       <li>Git</li>
-       <li>GitHub</li>
-       <li>Internet</li>
-       <li>plugins em programas</li>
-       <li>Html</li>
-       <li>CSS</li>
-    </ol>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Lesson Learned</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div id="cabecalho">
+            <h1 id="titulo">Olá meu nome é Izabela Hammerschlag</h1>
+        </div>
+        <img id="minha_foto" src="minhafoto.png" alt="minha foto"> 
+        <h2>Lista de lições aprendidas:</h2>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>comandos no terminal</li>
+            <li>VS code</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Internet</li>
+            <li>plugins em programas</li>
+            <li>Html</li>
+            <li>CSS</li>
+        </ol>
+        <h2>Lista de lições que ainda desejo aprender:</h2>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>Flexbox</li>
+            <li>FrameWork</li>
+            <li>Responsivo-mobile</li>
+            <li>React</li>
+            <li>Redux</li>
+            <li>SQL</li>
+            <li>Banco de dados (normalização e modelagem)</li>
+            <li>Pyton</li>
+            <li>Node JS</li>
+        </ul>
+    </body>
 </html>
+
 
 
