Apenas algumas edições

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <img id="minha_foto" src="WhatsApp Image 2021-08-16 at 14.15.36.jpeg" alt="A foto mostra a Amanda no template da Trybe">
 
-  <article>
-   <ol id="licoes_aprendidas"> <h3>Já aprendi:</h3>
+  <article id="listas">
+   <ol id="licoes_aprendidas"> <h3 id="aprendi">Já aprendi:</h3>
       <li>Conceitos teóricos iniciais de Unix & Shell;</li>
       <li>Conceitos teóricos iniciais de Unix & Bash;</li>
       <li>Git & GitHub - teoria e pratica; </li>
@@ -28,7 +28,7 @@
       <li>HTML Semântico;</li>
     </ol>
 
-    <ul id="licoes_a_aprender"><h3>Ainda tenho muito à aprender:</h3>
+    <ul id="licoes_a_aprender"><h3>Quero aprender:</h3>
       <li>JavaScript;</li>
       <li>Forms, Flexbox e Responsivo - HTML e CSS;</li>
       <li>React;</li>
