Add exercise 8 completed

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
       <li>Python</li>
     </ul>
     <a href="https://docs.github.com/pt" target="_blank">documentação github</a>
+    <article>
+      <p>
+        Wow, começamos...<br>
+        Como diz o Tio Jack <em>"foguete não dá ré"</em> e tem sido assim durante as primeiras semanas de Trybe. <br>
+        Muito conteúdo e muita prática, foram semanas de muito aprendizado e o tempo tem passado bem rápido. Difícil conseguir conciliar tudo, mas motivado com os novos desafios. Vamos com tudo!
+      </p>
+    </article>
 
     <footer id="rodape">
 
