--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
     <h3>Minhas Redes</h3>
     <nav class="contato">
-            <a href="https://github.com/TjAndrade99" target="_black"> <img src="inconProjeto/githubincon.png" alt="incone acesso ao perfil github" width="80px"></a>
-            <a href="https://www.linkedin.com/in/thiagojos%C3%A9andrade/" target="_black"> <img src="inconProjeto/linkedinicon.png" alt="incone acesso ao perfil linkedin" width="90px"></a>
+            <a href="https://github.com/TjAndrade99" target="_blank"> <img src="inconProjeto/githubincon.png" alt="incone acesso ao perfil github" width="80px"></a>
+            <a href="https://www.linkedin.com/in/thiagojos%C3%A9andrade/" target="_blank"> <img src="inconProjeto/linkedinicon.png" alt="incone acesso ao perfil linkedin" width="90px"></a>
     </nav>
     <div class="licoes">
     <section class="lista-esquerda">
@@ -77,7 +77,7 @@
 
         <p> Feito por Thiago José, Turma 16 - Tribo B. 2021</p>
     </footer>
-    <p> link de ajuda, curso gratuito para <a href="https://www.youtube.com/watch?v=Ejkb_YpuHWs&list=PLHz_AreHm4dkZ9-atkcmcBaMZdmLHft8n&ab_channel=CursoemV%C3%ADdeo" target="_black">HTML5 & CSS</a> com o Mestre Jedi Guanabara.</p>
+    <p> link de ajuda, curso gratuito para <a href="https://www.youtube.com/watch?v=Ejkb_YpuHWs&list=PLHz_AreHm4dkZ9-atkcmcBaMZdmLHft8n&ab_channel=CursoemV%C3%ADdeo" target="_blank">HTML5 & CSS</a> com o Mestre Jedi Guanabara.</p>
 
 </body>
 </html> 
