--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@ Eu na posição de pessoa estudante, posso afirmar que a Trybe conta com uma equ
     </section>
     <footer id="rodape">
         <section class="base_rodape">
-            <section class="creditos">
+            <section class="dados_rodape">
                 <p>Site desenvolvido por Breno Tainan</p>
             </section>
-            <section class="contato">
+            <section class="dados_rodape">
                 <table class="tabela_contato">
                     <tr>
                         <td>E-mail: </td>
