Add exercise 9 completed

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         Muito conteúdo e muita prática, foram semanas de muito aprendizado e o tempo tem passado bem rápido. Difícil conseguir conciliar tudo, mas motivado com os novos desafios. Vamos com tudo!
       </p>
     </article>
+    <aside>
+      <p>As primeiras aulas sobre os comandos do Unix foram bem importantes pra mim e me deu mais segurança de como trabalhar no terminal.</p>
+    </aside>
 
     <footer id="rodape">
 
