--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
         </ul>
 
         <section class="alinhar-artigos">        
-            <div class="artigo">
+            <section class="artigo">
                 <article class="lado-esquerdo">
                     <h2>Texto do Artigo</h2>
                             Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto.
                 </article>
-            </div>
+            </section>
 
-            <div class="artigo">
+            <section class="artigo">
                 <aside class="lado-direito">
                     <h2>Seção com Aside</h2>
                         Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto.
                 </aside>
-            </div>
+            </section>
         </section>            
         
 
