--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <li>Pyton</li>
             <li>Node JS</li>
         </ul>
+    <footer id="rodape">
+
+    </footer>
     </body>
 </html>
 
