--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
         </section>
         <article id="artigo">
             <h3>Trecho do livro Os trabalhadores do mar:</h3>
-            "...O olho do homem é feito de modo que se lhe vê por ele a virtude.A nossa pupila diz que quantidade de homens há dentro de nós.Afirmamo-nos pela luz que fica debaixo da sobrancelha.As pequenas consciencias piscam o olho,as grandes lançam raios.Se não há nada que brilhe debaixo da pálpebra,é que nada há que pense no cérebro,é que nada há que ame no coração.Quem ama quer,e aquele que quer relampeja e cintila.A resolução enche os olhos de fogo:admiravel fogo que se compõem da combustão de pensamentos timidos. Os teimoso são sublimes.Quem é apenas bravo tem só um assomo,quem é apenas valente tem só um temperamento,quem é apenas corajoso tem só uma virtude:o obstinado na verdade tem a grandeza.Quase todo segredo dos grandes coraçoes esta nesta palavra:"perseverando".A perseverança esta para coragem como a roda para a alavanca:é a renovação perpétua do ponto de apoio.(...) Na ordem dos fatos morais o cair não exclui o pairar.Da queda sai a ascensão.Os mediocres deixam-se perder pelo obstaculo especioso...
-            ...Não assim os fortes.Parecer é o talvez dos fortes,conquistar é a certeza deles."
+            Olho do homem é feito de modo que se lhe vê por ele a virtude.A nossa pupila diz que quantidade de homens há dentro de nós.Afirmamo-nos pela luz que fica debaixo da sobrancelha.As pequenas consciencias piscam o olho,as grandes lançam raios.Se não há nada que brilhe debaixo da pálpebra,é que nada há que pense no cérebro,é que nada há que ame no coração.Quem ama quer,e aquele que quer relampeja e cintila.A resolução enche os olhos de fogo:admiravel fogo que se compõem da combustão de pensamentos timidos.
         </article>
     </section>
     <aside id="aside">
         <h3>Trecho de A Náusea:</h3>
-        Os homens. É preciso amar os homens. Os homens são admiráveis. Sinto vontade de vomitar – e de repente aqui está ela: a Náusea. Então é isso a Náusea: essa evidência ofuscante? Existo – o mundo existe -, e sei que o mundo existe. Isso é tudo. Mas tanto faz para mim. É estranho que tudo me seja tão indiferente: isso me assusta. Gostaria tanto de me abandonar, de deixar de ter consciência de minha existência, de dormir. Mas não posso, sufoco: a existência penetra em mim por todos os lados, pelos olhos, pelo nariz, pela boca… E subitamente, de repente, o véu se rasga: compreendi, vi. A Náusea não me abandonou, e não creio que me abandone tão cedo; mas já não estou submetido a ela, já não se trata de uma doença, nem de um acesso passageiro: a Náusea sou eu.
+        Gostaria tanto de me abandonar, de deixar de ter consciência de minha existência, de dormir. Mas não posso, sufoco: a existência penetra em mim por todos os lados, pelos olhos, pelo nariz, pela boca… 
     </aside>
     </main>
     <footer id="rodape">Chulé</footer>
