--- a/index.html
+++ b/index.html
@@ -13,23 +13,17 @@
   <header id="cabecalho">
     <h1 id="titulo">Liçôes aprendidas - Trybe!</h1>
     <nav>
-      <a href="https://github.com/Rafael-Catarino" target="_blank" rel="external">Meu GitHub</a>
-
-      <a href="https://www.linkedin.com/in/rafael-dos-santos-catarino-ab9414206/" target="_blank" rel="external">Meu
-        Linkedin</a>
+      <a href="https://github.com/Rafael-Catarino" target="_blank" rel="external">GitHub</a>
+      <a href="https://www.linkedin.com/in/rafael-dos-santos-catarino-ab9414206/" target="_blank" rel="external">Linkedin</a>
     </nav>
   </header>
   <main>
-
     <section class="ao_lado">
       <img id="minha_foto" src="foto2.jpg" alt="foto de rafael">
     </section>
-
     <section class="ao_lado">
       <table border="1">
-        <tr>
-          <th colspan="2">Tabela de data e conteudos visto na Trybe</th>
-        </tr>
+        <caption colspan="2">Tabela de data e conteudos visto na Trybe</caption>
         <tr>
           <th>Data</th>
           <th>Conteudos Vistos</th>
@@ -60,9 +54,8 @@
         </tr>
       </table>
     </section>
-
     <section class="licoes">
-      <h3>Lições aprendidas</h3>
+      <h2>Lições aprendidas</h2>
       <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
@@ -76,10 +69,8 @@
         <li>Empatia</li>
       </ol>
     </section>
-
-
     <section class="licoes">
-      <h3>Lições a aprender</h3>
+      <h2>Lições a aprender</h2>
       <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>Python</li>
@@ -93,8 +84,6 @@
         <li>HOF</li>
       </ul>
     </section>
-
-
     <article class="lado-esquerdo">
       <p>Comecei a estudar na Trybe um pouco mais de duas semanas e o que posso dizer sobre o meu aprendizado é que está
         sendo bem intenso. Tem dias que não posso nem respirar para não perder tempo, tá uma coisa demaluco,mas estou
@@ -102,19 +91,14 @@
         fazer alguma coisa, porém chega no final eu vejo que consegui, e aprendi muito com as dificuldades que passei, e
         isso é muito gratificante.</p>
     </article>
-
     <aside class="lado-direito">
       <p>Uma das coisas que frequentemente acontece comigo é: eu estou estudando e surge uma dúvida daí eu começo a
         procurar uma solução para esse problema e não consigo encontrar. Aí eu coloco o problema no slack e lá aparece
         alguém com uma solução que sempre me salva. </p>
     </aside>
-
-
     <footer id="rodape">
       <p>Todos os diretos reservado a, Rafael Catarino</p>
     </footer>
   </main>
-
 </body>
-
 </html>
