--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <li>Pyton</li>
             <li>Node JS</li>
         </ul>
-    <footer id="rodape">
-
-    </footer>
+        <p><a href="https://www.linkedin.com/in/izabela-hammerschlag-80bb49216/?originalSubdomain=br" target="_blank">Meu LinkedIn</a></p>
+        <footer id="rodape">
+        </footer>
     </body>
 </html>
 
