ajustando o estilo da pagina

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="menu_principal">
       <ul>
         <li><a href="#home">Home</a></li>
-        <li><a href="#licoes_aprendidas">Lições</a></li>
+        <li><a href="#list_title">Lições</a></li>
         <li><a href="#artigos">Artigos</a></li>
       </ul>
     </nav>
@@ -22,7 +22,7 @@
     <img id="minha_foto" src="img/orlando.jpg" alt="homem em um shopping">
     
     <section>
-      <h2 class="list_title">Lições</h2>
+      <h2 id="list_title">Lições</h2>
 
       <ol id="licoes_aprendidas">
         <li>Unix</li>
@@ -102,6 +102,7 @@
   <footer id="rodape">
     <a class="link_redes_sociais" href="https://github.com/orlandodantas" target="_blank"><img src="img/github.png" alt="gatinho do GitHub"> <span>(open in a new window)</span> </a>
     <a class="link_redes_sociais" href="https://www.linkedin.com/in/orlando-dantas/" target="_blank"><img src="img/Linkedin.png" alt="I do Linkedin"> <span>(open in a new window)</span> </a>
+    <span class="copyright"> Todos os direitos reservados. <em>Orlando Dantas </em></span>
   </footer>
 </body>
 </html>
