--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
       e carrego a certeza de que, ao longo da minha formação, aprenderei muito
       mais.</p>
   </article>
+  <aside>
+    <h2>Para inspirar</h2>
+    <p>O filósofo Aristóteles afirmou que "A educação tem raízes amargas, mas
+      os seus frutos são doces". Nem sempre o processo de aprendizado é fácil,
+      então, quando as coisas pareceram amargas, lembre-se que, ao final da
+      caminhada, o sabor será doce.</p>
+  </aside>
   <footer id="rodape">
     <p>Conteúdo produzido e atualizado por <em>Tainá Santana</em>, 2021.</p>
   </footer>
