--- a/index.html
+++ b/index.html
@@ -72,9 +72,56 @@
         </aside>
     </section>
 
+    <!-- Requisito 12 -->
+    <section class="content-table">
+        <table class="tabela">
+            <p><strong>Progressão do Curso</strong></p>
+            <tr>
+                <th>Módulo Fundamentos</th>
+                <th>Status</th>
+            </tr>
+            <tr>
+                <td>Unix & Bash</td>
+                <td class="check">ꪜ</td>
+            </tr>
+            <tr>
+                <td>Git, Github e Internet</td>
+                <td class="check">ꪜ</td>
+            </tr>
+            <tr>
+                <td>Introdução à HTML E CSS</td>
+                <td class="check">ꪜ</td>
+            </tr>
+            <tr>
+                <td>Introdução à JavaScript</td>
+                <td class="not-check">ᝣ</td>
+            </tr>
+            <tr>
+                <td>HTML e CSS: Forms, Flexbos e Responsivo</td>
+                <td class="not-check">ᝣ</td>
+            </tr>
+            <tr>
+                <td>Introdução à JavaScript ES6 e Testes Unitários</td>
+                <td class="not-check">ᝣ</td>
+            </tr>
+            <tr>
+                <td>Higher Order Functions do JavaScript ES6</td>
+                <td class="not-check">ᝣ</td>
+            </tr>
+            <tr>
+                <td>JavaScript Assíncrono e Promises</td>
+                <td class="not-check">ᝣ</td>
+            </tr>
+            <tr>
+                <td>Testes automatizados com Jest</td>
+                <td class="not-check">ᝣ</td>
+            </tr>
+        </table>
+    </section>
+    <br>
     <!-- Requisito 6 -->
     <footer id="rodape">
-        "Conteúdo compilado por "Juan Morallys", <08/2021>".
+        <a href="https://github.com/tryber/sd-016-b-project-lessons-learned/pull/89" target="_blank">Conteúdo compilado por Juan Morallys - 08/2021</a>
     </footer>
 </body>
 </html>
