--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Raleway&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="container d_flex">
             <section class="d_flex center_all">
                 <h1 class="titles" id="titulo">Me</h1>
-                <img src="./assets/coffee.svg" alt="home icon">
+                <img src="./coffee.svg" alt="home icon">
             </section>
 
             <section>
@@ -52,7 +52,7 @@
                 </article>
     
                 <section class="sec_ab_3">
-                    <img id="minha_foto" class="border_secondary" src="./assets/Profile_picture_square.jpeg" alt="Gabriel Silvestre profile picture">
+                    <img id="minha_foto" class="border_secondary" src="./Profile_picture_square.jpeg" alt="Gabriel Silvestre profile picture">
                 </section>
             </div>
         </section>
@@ -101,13 +101,13 @@
                     <nav class="navbar">
                         <ul class="d_flex split_between social_icons">
                             <li>
-                                <a href="https://github.com/gabrielh-silvestre" target="_blank" rel="noopener noreferrer"><img src="./assets/github.svg" alt="github icon"></a>
+                                <a href="https://github.com/gabrielh-silvestre" target="_blank" rel="noopener noreferrer"><img src="./github.svg" alt="github icon"></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/gabrielh-silvestre/" target="_blank" rel="noopener noreferrer"><img src="./assets/linkedin.svg" alt="linkedin icon"></a>
+                                <a href="https://www.linkedin.com/in/gabrielh-silvestre/" target="_blank" rel="noopener noreferrer"><img src="./linkedin.svg" alt="linkedin icon"></a>
                             </li>
                             <li>
-                                <a href="mailto:gabriel.h.silvestre11@gmail.com"><img src="./assets/mail.svg" alt="email icon"></a>
+                                <a href="mailto:gabriel.h.silvestre11@gmail.com"><img src="./mail.svg" alt="email icon"></a>
                             </li>
                         </ul>
                     </nav>
