Main body and footer added

--- a/index.html
+++ b/index.html
@@ -30,12 +30,57 @@
           <a href="https://www.linkedin.com/in/marcos-carvalho-5bb42bb6/" target="_blank">
             <h3>Linkedin</h3>
           </a>
-          <br>
+         
           <a href="https://github.com/ItsMarcosC" target="_blank">
             <h3>Github</h3>
           </a>
         </nav>
       </aside>
+
+      <div class="lado-esquerdo">
+        <ol id="licoes_aprendidas">
+          <li>Unix</li>
+          <li>Shell</li>
+          <li>CSS</li>
+          <li>HTML</li>
+          <li>Empatia</li>
+          <li>Inteligência Emocional</li>
+          <li>Versionamento</li>
+          <li>Protocolos de Internet</li>
+          <li>HTML Semântico</li>
+          <li>Slack</li>
+        </ol>
+      </div>
+
+      <section class="lado-direito">
+        <ul id="licoes_a_aprender">
+          <li>Javascript</li>
+          <li>React</li>
+          <li>ES6</li>
+          <li>Python</li>
+          <li>Metodologias Ágeis</li>
+          <li>Testes Automatizados</li>
+          <li>Redux</li>
+          <li>SQL</li>
+          <li>Node.js</li>
+          <li>API</li>
+        </ul>
+      </section>
+      
+      <article id="l_aprendidas">
+        <p class="text">O processo é muito bem dividido e guiado, as aulas são de alta qualidade e ao mesmo tempo curtas, fazendo com que se mantenham interessantes! <br>
+        Embora ás vezes pareça muito complicado, com paciência e perseverança é possível notar avanços todos os dias, principalmente com todo o apoio da equipe que 
+        faz parte da Trybe e de todos os colegas da Turma 16 e das outras turmas mais antigas.
+        </p>
+      </article>
+
+      <section id="lol">
+        <p class="text"> A primeira aula sobre Unix foi extremamente interessante e cheia de conhecimentos novos, principalmente sobre como navegar pelo sistema somente pelo terminal.
+        </p>
+      </section>
     </div>
+    <footer id="rodape">
+        All rights reserved, Marcos
+    </footer>
 </body>
 </html>
