Add exercise 10 completed

--- a/index.html
+++ b/index.html
@@ -5,49 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto1 - Trybe</title>
   <link rel="stylesheet" href="./style.css">
+  <!-- fontes do google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
   <header id="cabecalho">
-    <h1 id="titulo">Hello World</h1>
+    <h1 id="titulo">Projeto | Número 1</h1>
+    <nav id="navegacao">
+      <ul>
+        <li><a href="#licoes_aprendidas">Lista</a></li>
+        <li><a href="#artigo">Artigo</a></li>
+        <li><a href="#secao">Seção</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
-    <img src="./BMTIMAO.jpg" id="minha_foto" alt="foto do autor do projeto">
-    <ol id="licoes_aprendidas">
-      <li>Fundamentos do desenvolvimento Web</li>
-      <li>Unix & Shell</li>
-      <li>Git & Github - o que é e pra que serve</li>
-      <li>Git & Github - entendendo os comandos</li>
-      <li>Internet - entendendo como ela funciona</li>
-      <li>HTML & CSS - estruturas de página</li>
-      <li>HTML & CSS - primeiros passos em CSS</li>
-      <li>HTML & CSS - seletores e posicionamento</li>
-      <li>HTML & CSS - semântico</li>
-      <li>NPM & Linters</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-      <li>JavaScript</li>
-      <li>Mais JavaScript...</li>
-      <li>E um pouco mais de JavaScript...</li>
-      <li>React</li>
-      <li>VueJS</li>
-      <li>SQL</li>
-      <li>MongoDB</li>
-      <li>API</li>
-      <li>Estrutura de dados</li>
-      <li>Python</li>
-    </ul>
-    <a href="https://docs.github.com/pt" target="_blank">documentação github</a>
-    <article>
-      <p>
-        Wow, começamos...<br>
-        Como diz o Tio Jack <em>"foguete não dá ré"</em> e tem sido assim durante as primeiras semanas de Trybe. <br>
-        Muito conteúdo e muita prática, foram semanas de muito aprendizado e o tempo tem passado bem rápido. Difícil conseguir conciliar tudo, mas motivado com os novos desafios. Vamos com tudo!
-      </p>
-    </article>
-    <aside>
-      <p>As primeiras aulas sobre os comandos do Unix foram bem importantes pra mim e me deu mais segurança de como trabalhar no terminal.</p>
-    </aside>
+    <section>
+      <img src="./BMTIMAO.jpg" id="minha_foto" alt="foto do autor do projeto">
+      <ol id="licoes_aprendidas">
+        <li>Fundamentos do desenvolvimento Web</li>
+        <li>Unix & Shell</li>
+        <li>Git & Github - o que é e pra que serve</li>
+        <li>Git & Github - entendendo os comandos</li>
+        <li>Internet - entendendo como ela funciona</li>
+        <li>HTML & CSS - estruturas de página</li>
+        <li>HTML & CSS - primeiros passos em CSS</li>
+        <li>HTML & CSS - seletores e posicionamento</li>
+        <li>HTML & CSS - semântico</li>
+        <li>NPM & Linters</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>Mais JavaScript...</li>
+        <li>E um pouco mais de JavaScript...</li>
+        <li>React</li>
+        <li>VueJS</li>
+        <li>SQL</li>
+        <li>MongoDB</li>
+        <li>API</li>
+        <li>Estrutura de dados</li>
+        <li>Python</li>
+      </ul>
+      <div>
+        <a href="https://docs.github.com/pt" target="_blank">documentação github</a>
+      </div>
+    </section>
+    <div>
+      <article id="artigo">
+        <p>
+          Wow, começamos...<br>
+          Como diz o Tio Jack <em>"foguete não dá ré"</em> e tem sido assim durante as primeiras semanas de Trybe. <br>
+          Muito conteúdo e muita prática, foram semanas de muito aprendizado e o tempo tem passado bem rápido. Difícil conseguir conciliar tudo, mas motivado com os novos desafios. Vamos com tudo!
+        </p>
+      </article>
+      <aside id="secao">
+        <p>As primeiras aulas sobre os comandos do Unix foram bem importantes pra mim e me deu mais segurança de como trabalhar no terminal.</p>
+      </aside>
+    </div>
 
     <footer id="rodape">
 
