adicionado link de novas fontes

--- a/index.html
+++ b/index.html
@@ -6,23 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>Lessons Learne</title>
 </head>
 
 <body>
     <header id="cabecalho">
+        <!-- Cabeçalho -->
         <div id="menu_titulo">
             <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
         </div>
     </header>
     <main>
         <article>
+            <!-- Perfil -->
             <section id="perfil">
                 <div id="perfil__box_img">
                     <img id="minha_foto" src="/sd-016-b-project-lessons-learned/img/Lucas_2021-3.jpg" alt="Imagem de Perfil">
                     <h2 id="meu_nome">Lucas Camargo</h2>
                 </div>
             </section>
+            <!-- Listas -->
             <section id="listas">
                 <div class="list__box">
                     <h2>Lições Aprendidas</h2>
@@ -54,6 +60,7 @@
                     </ul>
                 </div>
             </section>
+            <!-- Artigo -->
             <article id="artigo">
                 <section id="artigo_meu_aprendizado">
                     <div id="artigo_box">
@@ -71,6 +78,7 @@
             </article>
         </article>
     </main>
+    <!-- Rodapé -->
     <footer id="rodape">
         <nav>
             <ul>
