--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
             <li>Node JS</li>
         </ul>
         <article>
-        <p>De UNIX ao HTML e CSS!!! a primeira e a segunda semana na Trybe foram muito intensa e com muito aprendizado. Comecei aprendendo sobre Unix e Bash tanto a parte teorica e historica quanto a pratica, utilizando vários comandos no terminal (shell). Em seguida aprendi sobre Git e GitHub na pratica conseguindo versionar meus codigos em diferentes Branch's na Local para Remota, utilizei VS code para produzir os scripts. Depois estudei sobre a internet (modelo cliente & servidor, etc) e agora estudando muito HTML e CSS e realizando o meu primeiro projeto.</p>
+        <p>De UNIX ao HTML e CSS!!! a primeira e a segunda semana na Trybe foram muito intensa e com muito aprendizado. Comecei aprendendo sobre Unix e Bash tanto a parte teorica e historica quanto a pratica, utilizando vários comandos no terminal (shell). Em seguida aprendi sobre Git e GitHub na pratica conseguindo versionar meus codigos em diferentes Branch's na Local para Remota, utilizei VS code para produzir os scripts. Depois estudei sobre a internet (modelo cliente & servidor, etc) e agora estudando muito HTML e CSS e realizando agora o meu primeiro projeto.</p>
         </article>
+        <aside>
+            <p>Com o HTML e CSS foi possível fazer meu portfolio e colocar para o Mundo ver, além de praticar muito com outros sites aprendendo a estilizar e deixá-lo acessível.</p>
+        </aside>
         <p><a href="https://www.linkedin.com/in/izabela-hammerschlag-80bb49216/?originalSubdomain=br" target="_blank">Meu LinkedIn</a></p>
         <footer id="rodape">
         </footer>
