Fix Error messages from CodeSniffer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <header id ="cabecalho">
       <a href="https://www.betrybe.com/" target="_blank">
-        <img id="trybe-logo" src="Assets/Images/trybe-logo.png">
+        <img id="trybe-logo" src="Assets/Images/trybe-logo.png" alt="Logo da Trybe">
       </a>
 
       <header id="titulo">
@@ -24,7 +24,7 @@
           <h2>Marcos Carvalho</h2>
         </div>
        
-        <img id="minha_foto" src="Assets/Images/minha_foto.jpg">
+        <img id="minha_foto" src="Assets/Images/minha_foto.jpg" alt="Foto de Marcos Carvalho">
         
         <nav class="personal-links">
           <a href="https://www.linkedin.com/in/marcos-carvalho-5bb42bb6/" target="_blank">
