--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>  
     
     <!-- Requisito 7 -->
-    <a href="https://www.linkedin.com/in/juanmorallys/" target="_blank">LinkedIn</a>
+    <a class="link" href="https://www.linkedin.com/in/juanmorallys/" target="_blank">LinkedIn</a>
     
     <!-- Requisito 4 -->
     <section class="lista-ordenada">
