--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="cabecalho">
+        <header id="cabecalho">
             <h1 id="titulo">Olá meu nome é Izabela Hammerschlag</h1>
-        </div>
-        <img id="minha_foto" src="minhafoto.png" alt="minha foto"> 
+        </header>
+        <nav>
+        </nav>
+        <img id="minha_foto" src="minhafoto.png" alt="minha foto">
+        <section>
         <h2>Lista de lições aprendidas:</h2>
         <ol id="licoes_aprendidas">
             <li>Unix</li>
@@ -35,6 +38,7 @@
             <li>Banco de dados (normalização e modelagem)</li>
             <li>Pyton</li>
             <li>Node JS</li>
+        </section>
         </ul>
         <article>
         <p>De UNIX ao HTML e CSS!!! a primeira e a segunda semana na Trybe foram muito intensa e com muito aprendizado. Comecei aprendendo sobre Unix e Bash tanto a parte teorica e historica quanto a pratica, utilizando vários comandos no terminal (shell). Em seguida aprendi sobre Git e GitHub na pratica conseguindo versionar meus codigos em diferentes Branch's na Local para Remota, utilizei VS code para produzir os scripts. Depois estudei sobre a internet (modelo cliente & servidor, etc) e agora estudando muito HTML e CSS e realizando agora o meu primeiro projeto.</p>
