--- a/index.html
+++ b/index.html
@@ -2,36 +2,41 @@
 <html lange="pt-br">
     <head>
         <meta charset="UFT-8">
-        <link rel="stylesheet" href="style.css">
         <title>Lessons Learned</title>
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>
 
+    <body>
         <header id="cabecalho">
-                <h1>Lessons Learned</h1>
+                <h1 id="titulo">Lessons Learned</h1>
         </header>
-        <nav>
+
+        <nav class="menu">
             <ul>
                 <li><a href="#artigo">Início de uma jornada</a></li>
                 <li><a href="#licoes_aprendidas">Lições aprendidas</a></li>
                 <li><a href="#licoes_a_aprender">Lições a aprender</a></li>
             </ul>
         </nav>
+
+        <div>
         <img src="imagens/2e4c2e62-e377-44df-beda-2905a329f83b.jpeg" id="minha_foto">
+       </div>
+
         <main>
+        <div>
         <article id="artigo">
             <h2>O início de uma jornada</h2>
             <p class="article">Meu aprendizado na Trybe começou antes mesmo da aprovação. Logo no curso introdutório, somos apresentados ao JavaScript de forma simples e didática, para então realizar os desafios do processo seletivo. 
-                A prática constante nos prepara para o curso em si, que em menos de um mês de aulas me tornou capaz de criar este site!</p>
-        </article>
-            <aside>
-                <p>O aprendizado assíncrono com certeza foi um grande diferencial na metodologia ativa, servindo para me ensinar o mais importante: aprender a aprender. Pesquisar, manter a mente aberta e compartilhar o conhecimento.
-                </p>
+                A prática constante nos prepara para o curso em si, que em menos de um mês de aulas me tornou capaz de criar este site!</p></article>
+                <aside><p class="article">O aprendizado assíncrono com certeza foi um grande diferencial na metodologia ativa, servindo para me ensinar o mais importante: aprender a aprender. Pesquisar, manter a mente aberta e compartilhar o conhecimento.</p>
             </aside>
+        </div>
     
         <a href="https://www.linkedin.com/in/thaiscarrer/" target="_blank">Linkedin</a>
         <section>
         <h3 class="left">Lições aprendidas</h3>
+        <br>
         <ol id="licoes_aprendidas">
             <li>Fundamentos do Desenvolvimento Web</li>
             <li>Unix & Shell</li>
@@ -61,7 +66,16 @@
     </section>
     </main>
     <footer id="rodape">
-        <p>Rodapé</p>
+        <table>
+            <tr>
+                <th>Nome</th>
+                <th>Turma</th>
+            </tr>
+            <tr>
+                <td>Thaís Carrer</td>
+                <td>Turma 16 - Tribo B</td>
+            </tr>
+        </table>
     </footer>
     </body>
 </html>
