decimo primeiro requisito

--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@
         <p><a href="https://www.linkedin.com/in/izabela-hammerschlag-80bb49216/?originalSubdomain=br" target="_blank">Meu LinkedIn</a></p>
         <footer id="rodape">
         </footer>
+        <!– verificado com CodeSniffer ->
     </body>
 </html>
-
-
-
