--- a/index.html
+++ b/index.html
@@ -9,45 +9,41 @@
 		<header id="cabecalho">
     	<h1 id="titulo">Lessons Learned</h1>
 		</header>
-		<img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Perfil">
-		<article>
-			<h2>Estudar na Trybe</h2>
-			<p> 
-				Falta palavras para descrever o aprendizado com a Trybe. Então exemplifico dizendo que tem gosto de comer pão de queijo em uma varanda bem ventilada em um dia de férias. Eu disse férias? Sim, mas não confunda com pouco trabalho! Não tem essa de deixar para depois as tarefas diárias. Cada dia é repleto de novos conteúdos de hard skills e soft skills - o aprendizado não para!  
-			</p>
-			<p>
-				E onde entra o pão de queijo? A Trybe tem uma equipe fenomenal que facilita as coisas de um jeito incrível. Posso citar sua organização e condução, mas nada descreve a maneira como te fazem se sentir em sentir em casa.
-			</p>
-		</article>
-		<ol id="licoes_aprendidas">
-			<li>kernel</li>
-			<li>Shell</li>
-			<li>Bash</li>
-			<li>Git</li>
-			<li>GitHub</li>
-			<li>HTML</li>
-			<li>CSS</li>
-			<li>Estruturas de páginas</li>
-			<li>Seletores e posicionamento</li>
-			<li>Html semântico</li>
-		</ol>
-		<ul id="licoes_a_aprender">
-			<li>Javascript</li>
-			<li>React</li>
-			<li>Node</li>
-			<li>Express.js</li>
-			<li>SQL</li>
-			<li>NoSQL</li>
-			<li>Python</li>
-			<li>ORM</li>
-			<li>Lógica de programação</li>
-			<li>Algoritmos e estrutura de dados</li>
-		</ul>
+		<main>
+			<h2>Leandro Silva</h2>
+			<img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Perfil">
+			<article>
+				<h1>Estudar na Trybe</h1>
+					<p>Falta palavras para descrever o aprendizado com a Trybe. Então exemplifico dizendo que tem gosto de comer pão de queijo em uma varanda bem ventilada em um dia de férias. Eu disse férias? Sim, mas não confunda com pouco trabalho! Não tem essa de deixar para depois as tarefas diárias. Cada dia é repleto de novos conteúdos de hard skills e soft skills - o aprendizado não para!</p><p>E onde entra o pão de queijo? A Trybe tem uma equipe fenomenal que facilita as coisas de um jeito incrível. Posso citar sua organização e condução, mas nada descreve a maneira como te fazem se sentir em sentir em casa.</p>
+			</article>
+			<ol id="licoes_aprendidas">
+				<li>kernel</li>
+				<li>Shell</li>
+				<li>Bash</li>
+				<li>Git</li>
+				<li>GitHub</li>
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>Estruturas de páginas</li>
+				<li>Seletores e posicionamento</li>
+				<li>Html semântico</li>
+			</ol>
+			<ul id="licoes_a_aprender">
+				<li>Javascript</li>
+				<li>React</li>
+				<li>Node</li>
+				<li>Express.js</li>
+				<li>SQL</li>
+				<li>NoSQL</li>
+				<li>Python</li>
+				<li>ORM</li>
+				<li>Lógica de programação</li>
+				<li>Algoritmos e estrutura de dados</li>
+			</ul>
+		</main>
 		<aside>
 			<h2>Mão na massa</h2>
-			<p>
-				A Trybe nos ajuda a aprender programação colocando a mão na massa e trabalhar com pessoas das mais diferentes culturas e regiões, basta ter conexão com a internet.
-			</p>
+			<p>A Trybe nos ajuda a aprender programação colocando a mão na massa e trabalhar com pessoas das mais diferentes culturas e regiões, basta ter conexão com a internet.</p>
 		</aside>
 		<footer id="rodape">Jeito <a href="https://www.betrybe.com/" target="_blank">tryber</a> de ser</footer>
   </body>
