--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
     <footer id="rodape">
 
         <article> 
-             <p> Meu aprendizado até aqui não tem sido satisfatório,confesso que imaginei outra coisa, tenho tido dificuldades para aprender certas coisas. Acredito que essa dificuldade se deva por se tratar de área que não tinha visto nada em minha vida, em contrapartida tenho gostado demais das aulas e de todo conteudo que estudo por dia,tenho me esforçado bastante pra obter o máximo de conhecimento possivel, sempre revejo as aulas, busco as duvidas que os outros alunos tem no slack. Estou contente em me sentir tão disposto a aprender de uma forma que eu não sentia a tanto tempo na minha vida </p>
-    </article>
+             <p>
+                 Meu aprendizado até aqui não tem sido satisfatório,confesso que imaginei outra coisa, tenho tido dificuldades para aprender certas coisas. Acredito que essa dificuldade se deva por se tratar de área que não tinha visto nada em minha vida, em contrapartida tenho gostado demais das aulas e de todo conteudo que estudo por dia,tenho me esforçado bastante pra obter o máximo de conhecimento possivel, sempre revejo as aulas, busco as duvidas que os outros alunos tem no slack. Estou contente em me sentir tão disposto a aprender de uma forma que eu não sentia a tanto tempo na minha vida
+            </p>
+        </article>
             
     </footer>
 </body>
